Fixed code inspection warnings for API class and util class